# Anima_Old

./: .gitignore  CMakeLists.txt  README.md
AnimaEditor/: AEDocument.cpp  AEDocument.h  AELoadedResourcesPanel.cpp  AELoadedResourcesPanel.h  AELoadedResourcesTreeView.cpp  AELoadedResourcesTreeView.h  AEMainWindow.cpp  AEMainWindow.h  AEOGLWindowBase.cpp  AEOGLWindowBase.h  AEResourcesManagerModelViewer.cpp  AEResourcesManagerModelViewer.h  AEResourcesManagerTab.cpp  AEResourcesManagerTab.h  AnimaEditor.qrc  AnimaEditor.rc  AnimaEditorDocument.cpp  AnimaEditorDocument.h  AnimaEditorMainWindow.cpp  AnimaEditorMainWindow.h  AnimaEditorOGLWindowBase.cpp  AnimaEditorOGLWindowBase.h  CMakeLists.txt  CRModelViewer.cpp  CRModelViewer.h  EditWindow.h  ImportModelWindow.cpp  ImportModelWindow.h  NewInstanceWindow.cpp  NewInstanceWindow.h  NewProjectWindow.cpp  NewProjectWindow.h  ResourceManagerTab.cpp  ResourceManagerTab.h  Window.cpp  Window.h  WorldEditorTab.cpp  WorldEditorTab.h  main.cpp
AnimaEditor/Res/: AnimaEditor.icns  dark_style3.qss  style - Copia.qss
AnimaEngine/: AnimaABCamera.cpp  AnimaABCamera.h  AnimaAllocator.h  AnimaAnimation.cpp  AnimaAnimation.h  AnimaAnimationsManager.cpp  AnimaAnimationsManager.h  AnimaArray.cpp  AnimaArray.h  AnimaAssert.h  AnimaBenchmarkTimer.cpp  AnimaBenchmarkTimer.h  AnimaCamera.cpp  AnimaCamera.h  AnimaCamerasManager.cpp  AnimaCamerasManager.h  AnimaColorGenerator.cpp  AnimaColorGenerator.h  AnimaDataGenerator.cpp  AnimaDataGenerator.h  AnimaDataGeneratorsManager.cpp  AnimaDataGeneratorsManager.h  AnimaDefaultInteractors.cpp  AnimaDefaultInteractors.h  AnimaDefaultMouseInteractor.cpp  AnimaDefaultMouseInteractor.h  AnimaEngine.cpp  AnimaEngine.h  AnimaEngine.i  AnimaEngineConfig.h  AnimaEngineConfig.h.in  AnimaEngineCore.cpp  AnimaEngineCore.h  AnimaEnginePY.cpp  AnimaEnginePY.h  AnimaEngineStructure.mdj  AnimaFPCamera.cpp  AnimaFPCamera.h  AnimaFPSCamera.cpp  AnimaFPSCamera.h  (+200 more)
AnimaEngine/data/materials/: ante.amat  cromo.amat  default.amat  floor-material.amat  fornelli.amat  gomma.amat  grataPcott.amat  lavandino.amat  legno.amat  manopolePcott.amat  material-1.amat  material-2.amat  material-3.amat  model1-material.amat  model2-material.amat  model3-material.amat  model4-material.amat  oro.amat  pbr-material-osx.amat  pbr-material.amat  pcott.amat  rame.amat  scarichiLavandino.amat  tops.amat
AnimaEngine/data/models/: 900453.3ds  ae.blend  ae.blend1  cilindro.3ds  material.3ds  material.blend1  nurse.mtl  piano.3ds  piano.blend  piano.blend1  scimmia.3ds  scimmia.blend  scimmiaO.3ds  scimmiaX.3ds  scimmiaY.3ds  scimmiaZ.3ds  sfera.3ds  x.3ds  y.3ds  z.3ds
AnimaEngine/data/shaders/Common/: primitive-fs.glsl  primitive-vs.glsl
AnimaEngine/data/shaders/Deferred/: deferred-ambient-fs.glsl  deferred-ambient.fs  deferred-combine-fs.glsl  deferred-combine-vs.glsl  deferred-directional-fs.glsl  deferred-directional-vs.glsl  deferred-hemisphere-fs.glsl  deferred-hemisphere-vs.glsl  deferred-point-fs.glsl  deferred-point-vs.glsl  deferred-prepare-animated-vs.glsl  deferred-prepare-fs.glsl  deferred-prepare-vs.glsl  deferred-prepare.fs  deferred-prepare.vs  deferred-shadowMap-fs.glsl  deferred-shadowMap-vs.glsl  deferred-spot-fs.glsl  deferred-spot-vs.glsl  old-deferred-prepare.fs  old-deferred-prepare.vs  ssao-fs.glsl  ssao-vs.glsl
AnimaEngine/data/shaders/Filters/: fxaaFilter-fs.glsl  fxaaFilter.fs  gaussBlur7x1Filter-fs.glsl  gaussBlur7x1Filter-vs.glsl  nullFilter-fs.glsl  nullFilter.fs  nullFilter.vs
AnimaEngine/data/shaders/Forward/: forward-ambient-fs.glsl  forward-ambient.fs  forward-ambient.vs  forward-directional-fs.glsl  forward-directional-vs.glsl  forward-directional.fs  forward-directional.vs  forward-point-fs.glsl  forward-point.fs  forward-point.vs  forward-spot-fs.glsl  forward-spot.fs  forward-spot.vs
AnimaEngine/data/shaders/Includes/: compute-shadows-amount.asi  pbr-functions.asi
AnimaEngine/data/textures/: 000409.dds  000412.dds  000412_norm.dds  000415.dds  000415_norm.dds  000421.dds  000421_norm.dds  000467.dds  000467_norm.dds  000478.dds  000478_norm.dds  000550.dds  000550_norm.dds  000552_norm.dds  legno_1_norm.dds
AnimaEngineCore/: AnimaAllocator.h  AnimaAllocators.h  AnimaAssert.cpp  AnimaAssert.h  AnimaBenchmarkTimer.cpp  AnimaBenchmarkTimer.h  AnimaEngine.cpp  AnimaEngine.h  AnimaEngineCore.cpp  AnimaEngineCore.h  AnimaFace.cpp  AnimaFace.h  AnimaFreeListAllocator.cpp  AnimaFreeListAllocator.h  AnimaLinearAllocator.cpp  AnimaLinearAllocator.h  AnimaMaterialProperty.cpp  AnimaMaterialProperty.h  AnimaMesh.cpp  AnimaMesh.h  AnimaModel.cpp  AnimaModel.h  AnimaModelsManager.cpp  AnimaModelsManager.h  AnimaPoolAllocator.cpp  AnimaPoolAllocator.h  AnimaProxyAllocator.cpp  AnimaProxyAllocator.h  AnimaStackAllocator.cpp  AnimaStackAllocator.h  AnimaString.cpp  AnimaString.h  AnimaTypes.h  AnimaVertex.cpp  AnimaVertex.h  AnimaVertex.hpp  AnimaWindow_Base.cpp  AnimaWindow_Base.h  AnimaWindow_CocoaPlatform.h  AnimaWindow_CocoaPlatform.mm  (+14 more)
AnimaEngineDemo/OSX/: AnimaEngineDemo.xib  AnimaEngineDemoView.h  AnimaEngineDemoView.mm  AppDelegate.h  AppDelegate.mm  CMakeLists.txt  Info.plist  main.mm
AnimaEngineDemo/Windows/: CMakeLists.txt  main.cpp  main.h
AnimaEngineLib/: AnimaAllocator.h  AnimaAssert.cpp  AnimaAssert.h  AnimaEngineLib.cpp  AnimaEngineLib.h  AnimaStackAllocator.cpp  AnimaStackAllocator.h  AnimaTypes.h  CMakeLists.txt
AnimaEngineWS/: AnimaEngineWS.cpp  AnimaEngineWS.h  AnimaWindow.cpp  AnimaWindow.h  AnimaWindow_Base.h  AnimaWindow_CocoaPlatform.h  AnimaWindow_CocoaWindow.h  AnimaWindow_CocoaWindow.mm  AnimaWindow_Data.h  CMakeLists.txt
CorpusEditor/: CMakeLists.txt  CRModelViewer.cpp  CRModelViewer.h  CorpusDocument.cpp  CorpusDocument.h  CorpusEditor.qrc  CorpusEditor.rc  CorpusMainWindow.cpp  CorpusMainWindow.h  CorpusOGLWindow.cpp  CorpusOGLWindow.h  CorpusOGLWindowBase.cpp  CorpusOGLWindowBase.h  EditWindow.cpp  ResourceManagerTab.cpp  ResourceManagerTab.h  Window.cpp  Window.h  WorldEditorTab.cpp  WorldEditorTab.h  main.cpp
CorpusEditor/Res/: CorpusEditor.icns
(+268 files in other folders)
